styles.css
:root {
    font-family: sans-serif;
    font-size: 120%;

    --text-primary: oklch(17.764% 0 none);
    --text-on-highlight: oklch(17.764% 0 none);
    --background: oklch(99.809% 0.00918 106.565);
    --highlight-background: oklch(88.36% 0.12898 93.666);
}

/* Dark Mode! */
@media (prefers-color-scheme: dark) {
    :root {
        --text-primary: oklch(89.755% 0 none);
        --background: oklch(19.573% 0 none);
    }
}

body {
    margin-block-start: 2rem;
    margin-inline: auto;

    padding-inline: 1rem;

    background-color: var(--background);
    color: var(--text-primary);
}

a:link,
a:visited {
    color: inherit;
    text-underline-offset: 0.1em;
    text-decoration-thickness: 0.05em;
}

mark {
    color: var(--text-on-highlight);
    background: var(--highlight-background);
}

p {
    max-inline-size: 25em;
}

/*
    1.5em + 23.5em = 25em,
    to be the same width as paragraph
*/
dl,
ol,
ul {
    max-inline-size: 23.5em;
    padding-inline-start: 1.5em;
}

th,
td {
    padding-inline-end: 1em;
}

th {
    text-align: start;
}

td {
    vertical-align: middle;
    padding-block: 0.5em;
}

table {
    inline-size: 100%;
}

thead,
.what-column,
.by-column,
.length-column {
    display: none;
}

.image-column img {
    display: block;
    inline-size: 48px;
    block-size: 48px;
    object-fit: cover;
}

.item-text {
    min-inline-size: 0;
}

.item-details {
    display: block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-size: 0.8em;
}

.detail-by::before,
.detail-length::before {
    content: "·";
    margin-inline: 0.35em;
}

/* phone-only hacks */
@media (width < 576px) {
    table {
        table-layout: fixed;
    }

    .number-column {
        inline-size: 1.5rem;
        padding-inline-end: 0.5em;
    }

    .image-column {
        inline-size: 48px;
        padding-inline-end: 0;
    }

    .name-column {
        overflow: hidden;
    }

    .item-text > a {
        display: block;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
}

/* reveal what-column */
@media (width >= 576px) {
    thead {
        display: table-header-group;
    }

    .what-column {
        display: table-cell;
    }

    .detail-type {
        display: none;
    }

    .detail-by::before {
        content: none;
    }
}

/* reveal length-column */
@media (width >= 768px) {
    body {
        margin-block-start: 6rem;
        margin-inline: unset;

        padding-inline-start: 12.5%;
        inline-size: 87.5%;
        max-inline-size: 992px;
    }

    .length-column {
        display: table-cell;
        inline-size: 6rem;
    }

    .detail-length {
        display: none;
    }

    td {
        padding-block: 0;
    }
}

/* reveal by-column */
@media (width >= 992px) {
    .by-column {
        display: table-cell;
    }

    .length-column {
        inline-size: auto;
    }

    .item-details {
        display: none;
    }
}

